Adjust hero boxes for mobile

--- a/index.html
+++ b/index.html
@@ -53,20 +53,38 @@
                     <p>Victoria, BC</p>
                 </header>
                 <h1>Kelsey Legault</h1>
-                <div class="skillzsqaure">
-                    <ul>
-                        <li>ui/ux design</li>
-                        <li>branding</li>
-                        <li>art direction</li>
-                        <li>graphic design</li>
-                        <li>front-end development</li>
-                        <li>illustration</li>
-                    </ul>
+                <div class="square-container">
+                    <div class="square-container-list">
+                        <div class="drag">
+                            <div class="skillzsqaure">
+                                <ul>
+                                    <li>ui/ux design</li>
+                                    <li>branding</li>
+                                    <li>art direction</li>
+                                    <li>graphic design</li>
+                                    <li>front-end development</li>
+                                    <li>illustration</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square-container-computer">
+                        <div class="drag">
+                            <img class="computersquare" src="images/computersquare.png" alt="computer">
+                        </div>
+                    </div>
+                    <div class="square-container-fern">
+                        <div class="drag">
+                            <img class="fernsquare" src="images/fernsquare.png" alt="fern">
+                        </div>
+                    </div>
+                    <img class="fernsquare-orange" src="images/fernsquare-orange.png" alt="fern">
                 </div>
-                <img class="computersquare" src="images/computersquare.png" alt="computer" />
-                <img class="fernsquare" src="images/fernsquare.png" alt="fern" />
-                <img class="fernsquare-orange" src="images/fernsquare-orange.png" alt="fern" />
-                <figure><img class="arrow-image" src="images/arrow-down.svg" alt="" /></figure>
+                <figure>
+                    <div class="arrow-image-holder">
+                        <img class="arrow-image" src="images/arrow-down.svg" alt="">
+                    </div>
+                </figure>
             </div>
             <div class="">
                 <p class="tldr">
@@ -96,6 +114,7 @@
             </footer>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
