Try all color schemes in the world for bg color

--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
                     <div class="square-container-list">
                         <div class="drag">
                             <div class="skillzsqaure">
-                                <ul>
+                                <!-- <ul>
                                     <li>ui/ux design</li>
                                     <li>branding</li>
                                     <li>art direction</li>
                                     <li>graphic design</li>
                                     <li>front-end development</li>
                                     <li>illustration</li>
-                                </ul>
+                                </ul> -->
+                                <img class="" src="images/skillzcard.svg" alt="skillz">
                             </div>
                         </div>
                     </div>
@@ -78,7 +79,6 @@
                             <img class="fernsquare" src="images/fernsquare.png" alt="fern">
                         </div>
                     </div>
-                    <img class="fernsquare-orange" src="images/fernsquare-orange.png" alt="fern">
                 </div>
                 <figure>
                     <div class="arrow-image-holder">
