Fix draggables and prepare for mobile

--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
                     <div class="square-container-list">
                         <div class="drag">
                             <div class="skillzsqaure">
-                                <!-- <ul>
-                                    <li>ui/ux design</li>
-                                    <li>branding</li>
-                                    <li>art direction</li>
-                                    <li>graphic design</li>
-                                    <li>front-end development</li>
-                                    <li>illustration</li>
-                                </ul> -->
                                 <img class="" src="images/skillzcard.svg" alt="skillz">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="square-container-list-mobile">
+                        <div class="drag">
+                            <div class="skillzsqaure-mobile">
+                                <img class="" src="images/skillzcard-mobile.svg" alt="skillz">
                             </div>
                         </div>
                     </div>
@@ -74,12 +73,23 @@
                             <img class="computersquare" src="images/computersquare.png" alt="computer">
                         </div>
                     </div>
+                    <div class="square-container-computer-mobile">
+                        <div class="drag">
+                            <img class="computersquare-mobile" src="images/computersquare-mobile.png" alt="computer">
+                        </div>
+                    </div>
                     <div class="square-container-fern">
                         <div class="drag">
                             <img class="fernsquare" src="images/fernsquare.png" alt="fern">
                         </div>
                     </div>
+                    <div class="square-container-fern-mobile">
+                        <div class="drag">
+                            <img class="fernsquare-mobile" src="images/fernsquare-mobile.png" alt="fern">
+                        </div>
+                    </div>
                 </div>
+                <div class="fake-square"></div>
                 <figure>
                     <div class="arrow-image-holder">
                         <img class="arrow-image" src="images/arrow-down.svg" alt="">
