Add tunes and shh button

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
             <div class="hero-container">
                 <header>
                     <div class="header-left">
-                        <a target="_blank" href="mailto:kelseylegault@gmail.com">kelsey.legault@gmail.com</a>
+                        <a>
+                            <span>lol hello</span>
+                        </a>
                     </div>
-                    <p>Victoria, BC</p>
+                    <a class="volume-button"><span>sssshhh</span><span style="display:none">play some tunes</span></a>
                 </header>
                 <h1>Kelsey Legault</h1>
                 <div class="square-container">
@@ -124,6 +126,7 @@
             </footer>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
         <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         <script src="js/main.js"></script>
     </body>
