Tune up tunes and put back email

--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
             <div class="hero-container">
                 <header>
                     <div class="header-left">
-                        <a>
-                            <span>lol hello</span>
-                        </a>
+                        <a target="_blank" href="mailto:kelseylegault@gmail.com">kelseylegault@gmail.com</a>
                     </div>
-                    <a class="volume-button"><span>sssshhh</span><span style="display:none">play some tunes</span></a>
+                    <a class="volume-button"><span>sssshhh (mute)</span><span style="display:none">play some tunes</span></a>
                 </header>
                 <h1>Kelsey Legault</h1>
                 <div class="square-container">
