--- a/index.html
+++ b/index.html
@@ -83,9 +83,19 @@
                             <img class="fernsquare" src="images/fernsquare.png" alt="fern">
                         </div>
                     </div>
+                    <!-- <div class="square-container-pinkfern">
+                        <div class="drag">
+                            <img class="pinkfernsquare" src="images/pinkfernsquare.png" alt="fern">
+                        </div>
+                    </div> -->
                     <div class="square-container-fern-mobile">
                         <div class="drag">
                             <img class="fernsquare-mobile" src="images/fernsquare-mobile.png" alt="fern">
+                        </div>
+                    </div>
+                    <div class="square-container-flamingo">
+                        <div class="drag">
+                            <img class="flamingosquare" src="images/flamingosquare.png" alt="tv">
                         </div>
                     </div>
                 </div>
@@ -96,7 +106,7 @@
                     </div>
                 </figure>
             </div>
-            <div class="">
+            <div class="tldr-container">
                 <p class="tldr">
                     I’m a designer and artist working and studying in Victoria, BC. I’m currently finishing the last
                     year of my Computer Science and Visual Arts degree at the University of Victoria.
