--- a/404/index.html
+++ b/404/index.html
@@ -40,11 +40,13 @@
       ga('send', 'pageview');
     </script>
 </head>
-<body class="oops">
-        <div class="flex hero-content flex__vertical-center flex__horizontal-center flex-col">
-            <div class="outer-container oops flex-center">
-                <h1>Oops, Go back home <a href="/">here</a></h1>
-            </div>
+<body>
+        <div class="oops">
+            <h1>Oops, Go back home <a href="http://kelseylegault.com/">here</a></h1>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
+        <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        <script src="js/main.js"></script>
 </body>
 </html>
