clean up and add dolphin

--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
                             <img class="flamingosquare" src="images/flamingosquare.png" alt="tv">
                         </div>
                     </div>
+                    <div class="square-container-tv">
+                        <div class="drag">
+                            <img class="tvsquare" src="images/tvsquare.png" alt="tv">
+                        </div>
+                    </div>
+                    <div class="square-container-dolphin">
+                        <div class="drag">
+                            <img class="dolphinsquare" src="images/dolphinsquare.png" alt="tv">
+                        </div>
+                    </div>
                 </div>
                 <div class="fake-square"></div>
                 <figure>
