Add palm tree and link underlines

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="hero-container">
                 <header>
                     <div class="header-left">
-                        <a target="_blank" href="mailto:kelseylegault@gmail.com">kelseylegault@gmail.com</a>
+                        <a class="link-underline" target="_blank" href="mailto:kelseylegault@gmail.com">kelseylegault@gmail.com</a>
                     </div>
-                    <a class="volume-button"><span>sssshhh (mute)</span><span style="display:none">play some tunes</span></a>
+                    <a class="volume-button link-underline"><span>sssshhh (mute)</span><span style="display:none">play some tunes</span></a>
                 </header>
                 <h1>Kelsey Legault</h1>
                 <div class="square-container">
@@ -90,7 +90,7 @@
                     </div>
                     <div class="square-container-flamingo">
                         <div class="drag">
-                            <img class="flamingosquare" src="images/flamingosquare.png" alt="tv">
+                            <img class="flamingosquare" src="images/flamingosquare.png" alt="flamingo">
                         </div>
                     </div>
                     <div class="square-container-tv">
@@ -98,9 +98,14 @@
                             <img class="tvsquare" src="images/tvsquare.png" alt="tv">
                         </div>
                     </div>
+                    <div class="square-container-palmtree">
+                        <div class="drag">
+                            <img class="palmtreesquare" src="images/palmtreesquare.png" alt="palmtree">
+                        </div>
+                    </div>
                     <div class="square-container-dolphin">
                         <div class="drag">
-                            <img class="dolphinsquare" src="images/dolphinsquare.png" alt="tv">
+                            <img class="dolphinsquare" src="images/dolphinsquare.png" alt="dolphin">
                         </div>
                     </div>
                 </div>
@@ -128,8 +133,8 @@
             </div> -->
             <footer>
                 <div class="footer-text-container">
-                    <a class="footer-mailto" target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
-                    <ul>
+                    <a class="footer-mailto">2016 - ??</a>
+                    <ul class="link-underline-list ">
                         <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i>&nbsp;</i></a></li>
                         <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i>&nbsp;</i></a></li>
                         <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
