--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="footer-text-container">
                     <a class="footer-mailto">2016 - ??</a>
                     <ul class="link-underline-list ">
-                        <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i>&nbsp;</i></a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram<i>&nbsp;</i></a></li>
                         <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i>&nbsp;</i></a></li>
                         <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
                         <li><a target="_blank" href="https://github.com/kelseyll">github<i>&nbsp;</i></a></li>
