--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                     <a class="footer-mailto">2016 - ??</a>
                     <ul class="link-underline-list ">
                         <li><a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram<i>&nbsp;</i></a></li>
-                        <!-- <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i>&nbsp;</i></a></li> -->
                         <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
+                        <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i>&nbsp;</i></a></li>
                         <li><a target="_blank" href="https://github.com/kelseyll">github<i>&nbsp;</i></a></li>
                     </ul>
                 </div>
