Start work list

--- a/index.html
+++ b/index.html
@@ -122,15 +122,35 @@
                     year of my Computer Science and Visual Arts degree at the University of Victoria.
                 </p>
             </div>
-            <!-- <div class="work-items-container">
-                <ul>
-                    <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>ad campaign landing page</span><span>/ sept 2015</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>wait what installation</span><span>/ nov 2015</span><span>documentation <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>hackathon landing page</span><span>/ feb 2016</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
-                </ul>
-            </div> -->
+            <div class="work-items">
+                <div class="work-items-section">
+                    <h2>selected works</h2>
+                    <ul>
+                        <li><a href="#">JCURA</a></li>
+                        <li><a href="#">hacksomecrap</a></li>
+                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div class="work-items-section">
+                    <h2>selected exhibitions</h2>
+                    <ul>
+                        <li class="jcura"><a href="#">JCURA</a></li>
+                        <li><a href="#">hacksomecrap</a></li>
+                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div class="work-items-section">
+                    <h2>experience</h2>
+                    <ul>
+                        <li><a href="#">JCURA</a></li>
+                        <li><a href="#">hacksomecrap</a></li>
+                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+            </div>
             <footer>
                 <div class="footer-text-container">
                     <a class="footer-mailto">2016 - ??</a>
