Add years to list

--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
                 <div class="work-items-section">
                     <h2>selected works</h2>
                     <ul>
+                        <li>2016</li>
+                        <li><a href="#">JCURA</a></li>
+                        <li><a href="#">hacksomecrap</a></li>
+                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
+                        <li><a href="#"></a></li>
+                    </ul>
+                </div>
+                <div class="work-items-section">
+                    <h2>experience</h2>
+                    <ul>
+                        <li>2016</li>
                         <li><a href="#">JCURA</a></li>
                         <li><a href="#">hacksomecrap</a></li>
                         <li><a href="#"><i>Another Year</i> Exhibition</a></li>
@@ -135,16 +146,15 @@
                 <div class="work-items-section">
                     <h2>selected exhibitions</h2>
                     <ul>
+                        <li>2016</li>
                         <li class="jcura"><a href="#">JCURA</a></li>
                         <li><a href="#">hacksomecrap</a></li>
                         <li><a href="#"><i>Another Year</i> Exhibition</a></li>
                         <li><a href="#"></a></li>
                     </ul>
-                </div>
-                <div class="work-items-section">
-                    <h2>experience</h2>
                     <ul>
-                        <li><a href="#">JCURA</a></li>
+                        <li>2015</li>
+                        <li class="jcura"><a href="#">JCURA</a></li>
                         <li><a href="#">hacksomecrap</a></li>
                         <li><a href="#"><i>Another Year</i> Exhibition</a></li>
                         <li><a href="#"></a></li>
