--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <ul>
                         <li>2015</li>
                         <li class="jcura"><a href="#">JCURA</a></li>
-                        <li><a href="#">mew mew ii 2000</a></li>
+                        <li><a href="#">mew mew iiii 2000</a></li>
                         <li><a href="#"><i>Another Year</i> Exhibition</a></li>
                         <li><a href="#"></a></li>
                     </ul>
