--- a/index.html
+++ b/index.html
@@ -134,13 +134,23 @@
                     </ul>
                 </div>
                 <div class="work-items-section">
-                    <h2>experience</h2>
+                    <h2>Work experience</h2>
                     <ul>
-                        <li>2016</li>
-                        <li><a href="#">JCURA</a></li>
-                        <li><a href="#">hacksomecrap</a></li>
-                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
-                        <li><a href="#"></a></li>
+                        <li>2016 </li>
+                        <li>
+                            <a>Kelsey Legault Studios</a>
+                            <ul>
+                                <li>Sendwithus</li>
+                                <li>Launchaco</li>
+                                <li>Converlo</li>
+                            </ul>
+                        </li>
+                        <li>&nbsp;</li>
+                        <li>2015</li>
+                        <li><a href="https://getflow.com" target="_blank">Flow</a></li>
+                        <li>&nbsp;</li>
+                        <li>2014</li>
+                        <li><a>UVic Bookstore</a></li>
                     </ul>
                 </div>
                 <div class="work-items-section">
