--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <ul>
                         <li>2016</li>
                         <li class="jcura"><a href="#">JCURA</a></li>
-                        <li><a href="#">hacksomecrap</a></li>
+                        <li><a href="#">hacksomeRap</a></li>
                         <li><a href="#"><i>Another Year</i> Exhibition</a></li>
                         <li><a href="#"></a></li>
                     </ul>
