--- a/index.html
+++ b/index.html
@@ -122,53 +122,10 @@
                     year of my Computer Science and Visual Arts degree at the University of Victoria.
                 </p>
             </div>
-            <div class="work-items">
-                <div class="work-items-section">
-                    <h2>selected works</h2>
-                    <ul>
-                        <li>2016</li>
-                        <li><a href="#">JCURA</a></li>
-                        <li><a href="#">hacksomecrap</a></li>
-                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                </div>
-                <div class="work-items-section">
-                    <h2>Work experience</h2>
-                    <ul>
-                        <li>2016 </li>
-                        <li>
-                            <a>Kelsey Legault Studios</a>
-                            <ul>
-                                <li>Sendwithus</li>
-                                <li>Launchaco</li>
-                                <li>Converlo</li>
-                            </ul>
-                        </li>
-                        <li>&nbsp;</li>
-                        <li>2015</li>
-                        <li><a href="https://getflow.com" target="_blank">Flow</a></li>
-                        <li>&nbsp;</li>
-                        <li>2014</li>
-                        <li><a>UVic Bookstore</a></li>
-                    </ul>
-                </div>
-                <div class="work-items-section">
-                    <h2>selected exhibitions</h2>
-                    <ul>
-                        <li>2016</li>
-                        <li class="jcura"><a href="#">JCURA</a></li>
-                        <li><a href="#">hacksomeRap</a></li>
-                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                    <ul>
-                        <li>2015</li>
-                        <li class="jcura"><a href="#">JCURA</a></li>
-                        <li><a href="#">mew mew iiii 2000</a></li>
-                        <li><a href="#"><i>Another Year</i> Exhibition</a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
+            <div class="work-container">
+                <div class="row">
+                    <img src="" alt="">
+                    <p></p>
                 </div>
             </div>
             <footer>
