--- a/index.html
+++ b/index.html
@@ -124,8 +124,16 @@
             </div>
             <div class="work-container">
                 <div class="row">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="images/work/casino-poster.png" alt="casino poster">
+                    <p>casino pop-up art series / NOV 2016 / graphic design </p>
+                </div>
+                <div class="row">
+                    <img src="images/work/ymal-poster.png" alt="casino poster">
+                    <p>digital art show / FEB 2017 / art direction / graphic design / photography / animation </p>
+                </div>
+                <div class="row">
+                    <img src="images/work/swu-login.svg" alt="sendwithus login modals">
+                    <p>login modals and states / FEB 2017 / ui design / ux design </p>
                 </div>
             </div>
             <footer>
