--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
                     <img src="images/work/swu-login.svg" alt="sendwithus login modals">
                     <p>login modals and states / FEB 2017 / ui design / ux design </p>
                 </div>
+                <div class="row">
+                    <img src="images/work/still.png" alt="still from not-so-still life">
+                    <p>film still / FEB 2017 / videography / set design </p>
+                </div>
+                <div class="row">
+                    <img src="images/work/hacksmoecrap.png" alt="still life photo series">
+                    <p>hacksomecrap / AUG 2016 / ui design / front-end dev</p>
+                </div>
+                <div class="row">
+                    <img src="images/work/miller.svg" alt="still life photo series">
+                    <p>alexandria miller / JAN 2017 / logo design </p>
+                </div>
             </div>
             <footer>
                 <div class="footer-text-container">
