Optimize images and add more work

--- a/index.html
+++ b/index.html
@@ -1,168 +1,180 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>~</title>
+<head>
+    <title>~</title>
 
-        <!-- Facebook Meta Properties -->
-        <meta property="og:image" content="http://kelseylegault.com/images/metaimage.jpg">
-        <meta property="og:title" content="Kelsey Legault">
-        <meta property="og:site_name" content="Kelsey Legault"/>
-        <meta property="og:description" content="I am a designer living in Victoria, BC">
-        <meta property="og:url" content="http://kelseylegault.com" />
+    <!-- Facebook Meta Properties -->
+    <meta property="og:image" content="http://kelseylegault.com/images/metaimage.jpg">
+    <meta property="og:title" content="Kelsey Legault">
+    <meta property="og:site_name" content="Kelsey Legault"/>
+    <meta property="og:description" content="I am a designer living in Victoria, BC">
+    <meta property="og:url" content="http://kelseylegault.com" />
 
-        <!-- Generic Meta Properties -->
-        <meta charset="UTF-8">
-        <meta name="description" content="I am a designer living in Victoria, BC">
-        <meta name="keywords" content="Portfolio, Designer, Design, Kelsey Legault">
-        <meta name="author" content="Kelsey Legault">
+    <!-- Generic Meta Properties -->
+    <meta charset="UTF-8">
+    <meta name="description" content="I am a designer living in Victoria, BC">
+    <meta name="keywords" content="Portfolio, Designer, Design, Kelsey Legault">
+    <meta name="author" content="Kelsey Legault">
 
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-        <!-- Mobile -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Stylesheets -->
-        <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="css/animations.css">
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/animations.css">
 
-        <!-- Fonts -->
-        <link rel="stylesheet" href="css/fonts.css" media="screen" title="no title" charset="utf-8">
-        <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+    <!-- Fonts -->
+    <link rel="stylesheet" href="css/fonts.css" media="screen" title="no title" charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
-        <!-- Javascript -->
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <!-- Javascript -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-73962302-1', 'auto');
-          ga('send', 'pageview');
-        </script>
-    </head>
-    <body>
-        <div class="outer-container">
-            <!-- <div class="hero-left-rectangle"></div> -->
-            <div class="hero-container">
-                <header>
-                    <div class="header-left">
-                        <a class="link-underline" target="_blank" href="mailto:kelseylegault@gmail.com">kelseylegault@gmail.com</a>
-                    </div>
-                    <a class="volume-button link-underline"><span>sssshhh (mute)</span><span style="display:none">play some tunes</span></a>
-                </header>
-                <h1>Kelsey Legault</h1>
-                <div class="square-container">
-                    <div class="square-container-list">
-                        <div class="drag">
-                            <div class="skillzsqaure">
-                                <img class="" src="images/skillzcard.svg" alt="skillz">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="square-container-list-mobile">
-                        <div class="drag">
-                            <div class="skillzsqaure-mobile">
-                                <img class="" src="images/skillzcard-mobile.svg" alt="skillz">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="square-container-computer">
-                        <div class="drag">
-                            <img class="computersquare" src="images/computersquare.png" alt="computer">
-                        </div>
-                    </div>
-                    <div class="square-container-computer-mobile">
-                        <div class="drag">
-                            <img class="computersquare-mobile" src="images/computersquare-mobile.png" alt="computer">
-                        </div>
-                    </div>
-                    <div class="square-container-fern">
-                        <div class="drag">
-                            <img class="fernsquare" src="images/fernsquare.png" alt="fern">
-                        </div>
-                    </div>
-                    <div class="square-container-fern-mobile">
-                        <div class="drag">
-                            <img class="fernsquare-mobile" src="images/fernsquare-mobile.png" alt="fern">
-                        </div>
-                    </div>
-                    <div class="square-container-flamingo">
-                        <div class="drag">
-                            <img class="flamingosquare" src="images/flamingosquare.png" alt="flamingo">
-                        </div>
-                    </div>
-                    <div class="square-container-tv">
-                        <div class="drag">
-                            <img class="tvsquare" src="images/tvsquare.png" alt="tv">
-                        </div>
-                    </div>
-                    <div class="square-container-palmtree">
-                        <div class="drag">
-                            <img class="palmtreesquare" src="images/palmtreesquare.png" alt="palmtree">
-                        </div>
-                    </div>
-                    <div class="square-container-dolphin">
-                        <div class="drag">
-                            <img class="dolphinsquare" src="images/dolphinsquare.png" alt="dolphin">
+    ga('create', 'UA-73962302-1', 'auto');
+    ga('send', 'pageview');
+    </script>
+</head>
+<body>
+    <div class="outer-container">
+        <!-- <div class="hero-left-rectangle"></div> -->
+        <div class="hero-container">
+            <header>
+                <div class="header-left">
+                    <a class="link-underline" target="_blank" href="mailto:kelseylegault@gmail.com">kelseylegault@gmail.com</a>
+                </div>
+                <a class="volume-button link-underline"><span>sssshhh (mute)</span><span style="display:none">play some tunes</span></a>
+            </header>
+            <h1>Kelsey Legault</h1>
+            <div class="square-container">
+                <div class="square-container-list">
+                    <div class="drag">
+                        <div class="skillzsqaure">
+                            <img class="" src="images/skillzcard.svg" alt="skillz">
                         </div>
                     </div>
                 </div>
-                <div class="fake-square"></div>
-                <figure>
-                    <div class="arrow-image-holder">
-                        <img class="arrow-image" src="images/arrow-down.svg" alt="">
+                <div class="square-container-list-mobile">
+                    <div class="drag">
+                        <div class="skillzsqaure-mobile">
+                            <img class="" src="images/skillzcard-mobile.svg" alt="skillz">
+                        </div>
                     </div>
-                </figure>
-            </div>
-            <div class="tldr-container">
-                <p class="tldr">
-                    I’m a designer and artist working and studying in Victoria, BC. I’m currently finishing the last
-                    year of my Computer Science and Visual Arts degree at the University of Victoria.
-                </p>
-            </div>
-            <div class="work-container">
-                <div class="row">
-                    <img src="images/work/casino-poster.png" alt="casino poster">
-                    <p>casino pop-up art series / NOV 2016 / graphic design </p>
                 </div>
-                <div class="row">
-                    <img src="images/work/ymal-poster.png" alt="casino poster">
-                    <p>digital art show / FEB 2017 / art direction / graphic design / photography / animation </p>
+                <div class="square-container-computer">
+                    <div class="drag">
+                        <img class="computersquare" src="images/computersquare.png" alt="computer">
+                    </div>
                 </div>
-                <div class="row">
-                    <img src="images/work/swu-login.svg" alt="sendwithus login modals">
-                    <p>login modals and states / FEB 2017 / ui design / ux design </p>
+                <div class="square-container-computer-mobile">
+                    <div class="drag">
+                        <img class="computersquare-mobile" src="images/computersquare-mobile.png" alt="computer">
+                    </div>
                 </div>
-                <div class="row">
-                    <img src="images/work/still.png" alt="still from not-so-still life">
-                    <p>film still / FEB 2017 / videography / set design </p>
+                <div class="square-container-fern">
+                    <div class="drag">
+                        <img class="fernsquare" src="images/fernsquare.png" alt="fern">
+                    </div>
                 </div>
-                <div class="row">
-                    <img src="images/work/hacksmoecrap.png" alt="still life photo series">
-                    <p>hacksomecrap / AUG 2016 / ui design / front-end dev</p>
+                <div class="square-container-fern-mobile">
+                    <div class="drag">
+                        <img class="fernsquare-mobile" src="images/fernsquare-mobile.png" alt="fern">
+                    </div>
                 </div>
-                <div class="row">
-                    <img src="images/work/miller.svg" alt="still life photo series">
-                    <p>alexandria miller / JAN 2017 / logo design </p>
+                <div class="square-container-flamingo">
+                    <div class="drag">
+                        <img class="flamingosquare" src="images/flamingosquare.png" alt="flamingo">
+                    </div>
+                </div>
+                <div class="square-container-tv">
+                    <div class="drag">
+                        <img class="tvsquare" src="images/tvsquare.png" alt="tv">
+                    </div>
+                </div>
+                <div class="square-container-palmtree">
+                    <div class="drag">
+                        <img class="palmtreesquare" src="images/palmtreesquare.png" alt="palmtree">
+                    </div>
+                </div>
+                <div class="square-container-dolphin">
+                    <div class="drag">
+                        <img class="dolphinsquare" src="images/dolphinsquare.png" alt="dolphin">
+                    </div>
                 </div>
             </div>
-            <footer>
-                <div class="footer-text-container">
-                    <a class="footer-mailto">2016 - ??</a>
-                    <ul class="link-underline-list ">
-                        <li><a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram<i>&nbsp;</i></a></li>
-                        <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
-                        <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i>&nbsp;</i></a></li>
-                        <li><a target="_blank" href="https://github.com/kelseyll">github<i>&nbsp;</i></a></li>
-                    </ul>
+            <div class="fake-square"></div>
+            <figure>
+                <div class="arrow-image-holder">
+                    <img class="arrow-image" src="images/arrow-down.svg" alt="">
                 </div>
-            </footer>
+            </figure>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
-        <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+        <div class="tldr-container">
+            <p class="tldr">
+                I’m a designer and artist working and studying in Victoria, BC. I’m currently finishing the last
+                year of my Computer Science and Visual Arts degree at the University of Victoria.
+            </p>
+        </div>
+        <div class="work-container">
+            <div class="row">
+                <img src="images/work/casino-poster.png" alt="casino poster">
+                <p>casino pop-up art series, NOV 2016. graphic design </p>
+            </div>
+            <div class="row">
+                <a target="_blank" href="https://vimeo.com/205720177">
+                    <img src="images/work/still.jpg" alt="still from not-so-still life">
+                    <p>video installation, FEB 2017. videography / art direction / set design </p>
+                </a>
+            </div>
+            <div class="row">
+                <img src="images/work/swu-login.svg" alt="sendwithus login modals">
+                <p>login states, FEB 2017. ui design / ux design </p>
+            </div>
+            <div class="row">
+                <img src="images/work/ymal-poster.png" alt="casino poster">
+                <p>digital art show, FEB 2017. art direction / graphic design / photography / animation </p>
+            </div>
+            <div class="row">
+                <a target="_blank" href="http://www.hacksomecrap.com">
+                    <img src="images/work/hacksmoecrap.png" alt="still life photo series">
+                    <p>hacksomecrap website, AUG 2016. ui design / front-end dev</p>
+                </a>
+            </div>
+            <div class="row">
+                <img src="images/work/logo-exploration.svg" alt="still life photo series">
+                <p>logo design, JAN 2017. branding / graphic design / illustration</p>
+            </div>
+            <div class="row">
+                <img src="images/work/flow.svg" alt="still life photo series">
+                <p>flow landing page, AUG 2015. ui design / ux design </p>
+            </div>
+            <div class="row">
+                <img src="images/work/photo-fruit.png" alt="still life photo series">
+                <p>still life photo series, OCT 2016. film photography / art direction </p>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text-container">
+                <a class="footer-mailto">2016 - ??</a>
+                <ul class="link-underline-list ">
+                    <li><a target="_blank" href="https://www.instagram.com/kelsey.legault/">instagram<i>&nbsp;</i></a></li>
+                    <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
+                    <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i>&nbsp;</i></a></li>
+                    <li><a target="_blank" href="https://github.com/kelseyll">github<i>&nbsp;</i></a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="js/main.js"></script>
+</body>
 </html>
